# healthpipe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: dashboard_guide.md  getting_started.md
examples/: basic_usage.py  healthcare_quality_demo.py
src/healthpipe/: __init__.py
src/healthpipe/core/: __init__.py  assessor.py  monitor.py  multi_system.py  readiness.py
src/healthpipe/dashboard/: __init__.py  app.py
src/healthpipe/utils/: __init__.py  logger.py  metrics.py
src/healthpipe/validators/: __init__.py  accuracy.py  base.py  completeness.py  consistency.py  timeliness.py  uniqueness.py  validity.py
tests/: __init__.py  test_assessor.py
