[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthpipe"
version = "0.1.0"
description = "Automated Data Quality Assessment Framework for AI-Ready Clinical Datasets"
authors = [{name = "Praveen Kumar Polisetty", email = "praveen.polisetty2123@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["healthcare", "data quality", "FHIR", "clinical data", "AI readiness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"